[tool.poetry]
name = "qr-code-creator"
version = "0.1.0"
description = ""
authors = ["xXAIbotXx <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
qrcode = "^7.3.1"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
